--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-native-community/slider": "4.4.2",
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "@expo/metro-runtime": "~3.1.3",
+    "expo-clipboard": "~5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
