--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
     "@expo/metro-runtime": "~3.1.3",
-    "expo-clipboard": "~5.0.1"
+    "expo-clipboard": "~5.0.1",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
